# website_django

./: .gitignore  pyproject.toml
src/portfolio_ws/: manage.py
src/portfolio_ws/career_break_journey/: about.html  asgi.py  index.html  settings.py  urls.py  wsgi.py
src/portfolio_ws/personal_website/: admin.py  models.py  urls.py  views.py
src/portfolio_ws/personal_website/migrations/: 0001_initial.py  0002_alter_project_image_url.py
src/portfolio_ws/personal_website/static/personal_website/css/: styles.css
src/portfolio_ws/personal_website/static/personal_website/js/: script.js
src/portfolio_ws/personal_website/templates/personal_website/: about_extension.html  base.html  home.html  index.html
