[project]
name = "portfolio-ws"
version = "0.1.0"
description = ""
authors = [
    {name = "Jarmo Kruse",email = "jarmo2.0@tutanota.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "portfolio_ws", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
